improve data block reading/skipping logic data is now read in lazily with an Enumerator. unread data will be discarded when fetching the next item. - 87% API coverage

--- a/libarchive-sharp/libarchive-sharp.csproj
+++ b/libarchive-sharp/libarchive-sharp.csproj
@@ -8,6 +8,7 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <Platforms>AnyCPU;x64</Platforms>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
